began working on spacing issue

--- a/energy-projects/solar-styles.css
+++ b/energy-projects/solar-styles.css
@@ -47,7 +47,7 @@ html, body {
 	background-color: #f0f0f0;
     border: 1px solid #ccc;
     padding: 20px;
-	height: 100%;
+		height: 100%;
 
 	display: flex;
 	flex-direction: column;
@@ -101,8 +101,6 @@ html, body {
 	background-color: var(--sky-color);
 	outline: 5px black;
 	text-align: center;
-	height: 50%;
-	max-height: 100%;
 }
 
 .result-bar{
